<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <LinearLayout
            android:id="@+id/layout_close"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_close"/>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_close"
                android:visibility="gone"/>
            <!--android:src="@drawable/ic_main_return"-->
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLength="12"
            android:singleLine="true"
            android:text="@string/login_text"
            android:textColor="@color/light_black_color"
            android:textSize="18sp"/>


        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/login_register"
                android:textColor="@color/main_blue_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/line"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="33dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/ic_phone"/>

                <EditText
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/iv_phone"
                    android:background="@null"
                    android:hint="@string/login_hide_phone"
                    android:inputType="number"
                    android:textColor="@color/light_black_color"
                    android:textSize="15sp">


                </EditText>
                <!--android:maxLength="11"-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/ic_pwd"/>

                <EditText
                    android:id="@+id/tv_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/iv_validate"
                    android:layout_toRightOf="@+id/iv_pwd"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/login_hide_pwd"
                    android:inputType="number"
                    android:textColor="@color/light_black_color"
                    android:textSize="15sp"
                    />

                <Button
                    android:id="@+id/iv_validate"
                    android:layout_width="83dp"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_validate_btn"
                    android:enabled="false"
                    android:text="获取验证码"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/iv_validate"
                    android:background="@color/line"/>
            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_error_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:textColor="@color/login_red_color"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/login_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/login_btn_normal"
            android:enabled="false"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/wx_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/wx_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_wx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="微信登录"
            android:textColor="@color/light_black_color"
            android:textSize="13sp"/>
    </LinearLayout>

</LinearLayout>
